# xm-qa-chatbot

./: .clineignore  .coverage  .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DAEMON_MANAGEMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  ImplementationPlan.md  Makefile  README.md  REQUIREMENTS.md  alembic.ini  docker-compose.yml  fix_html_dashboard.md  pyproject.toml
.agents/skills/add-hexagonal-feature/: SKILL.md
.agents/skills/bootstrap-python-app/: SKILL.md
.agents/skills/format-python-code/: SKILL.md
.agents/skills/lint-python-code/: SKILL.md
.agents/skills/python-add-adapter/: SKILL.md
.agents/skills/python-add-port/: SKILL.md
.agents/skills/run-local-quality-gate/: SKILL.md
.agents/skills/write-adr/: SKILL.md
.clinerules/: 00-readme.md  01-core-standards.md  02-core-standards.md  04-testing-standards.md  07-repo-navigation.md  10-tooling-and-ci.md  12-logging-conventions.md
.clinerules/workflows/: improve.md  update-repo-navigation.md
.gitlab/ci/: stages.yml
.gitlab/ci/jobs/: quality.yml
config/: reporting_config.yaml
docs/: AUDIT-REPORT.md  ports.md  project-navigation.md
docs/adr/: ADR-001-hexagonal-architecture.md  ADR-002-llm-provider-and-retry-policy.md  ADR-003-dashboard-rendering-pipeline.md  ADR-004-storage-strategy-and-migrations.md
migrations/: env.py
migrations/versions/: 0001_create_submissions_table.py  e238143a8d1a_update_submissions_schema_to_match_.py  edcda2791bed_create_submissions_table.py
scripts/: README_API_SUBMISSION.md  generate_dashboard.py  seed_database.py  serve_dashboard.py  submit_data_direct.py  submit_via_api.py  update_clinerules.sh
src/qa_chatbot/: __init__.py  main.py
src/qa_chatbot/adapters/: __init__.py
src/qa_chatbot/application/: __init__.py
src/qa_chatbot/config/: __init__.py  logging_config.py  reporting_config.py  settings.py
src/qa_chatbot/domain/: __init__.py  exceptions.py
tests/: conftest.py
tests/e2e/: __init__.py  test_chatbot_conversation.py  test_chatbot_conversation_edge_cases.py  test_chatbot_positive_flow_playwright.py
tests/integration/adapters/: test_openai_adapter.py  test_openai_transport_integration.py  test_sqlite_adapter.py
tests/unit/: test_main.py
tests/unit/adapters/: test_confluence_dashboard_adapter.py  test_dashboard_dual_output_adapters.py  test_gradio_adapter.py  test_gradio_formatters.py  test_gradio_rate_limiter.py  test_health_check_adapter.py  test_html_dashboard_adapter.py  test_jira_mock_adapter.py  test_metrics_adapter.py  test_openai_adapter.py  test_openai_client.py  test_openai_response_helpers.py  test_sqlite_mappers.py  test_structured_extraction_helpers.py  test_structured_extraction_port_contract.py
tests/unit/application/: test_extract_structured_data.py  test_generate_monthly_report.py  test_get_dashboard_data.py  test_reporting_calculations.py  test_submit_project_data.py
tests/unit/config/: test_logging_config.py  test_reporting_config.py  test_settings.py
tests/unit/domain/: test_entities.py  test_reporting_registry.py  test_stream_project_registry.py  test_stream_project_registry_filters.py  test_submission_metrics.py  test_value_objects.py
(+132 files in other folders)
