[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_chatbot"]

[project]
name = "qa-chatbot"
version = "0.1.0"
description = "LLM-powered QA metrics collection chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "gradio>=6.6.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
    "SQLAlchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Coverage scope is intentionally limited to application package sources.
# Operational scripts under scripts/ are excluded from measured coverage for now.
addopts = "-ra --cov=src/qa_chatbot --cov-report=term-missing --cov-fail-under=98"
markers = [
    "integration: tests that validate behavior across module boundaries",
    "e2e: tests that exercise end-to-end user-facing flows",
    "slow: tests with longer runtime or external dependency setup",
]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "D203",   # incorrect-blank-line-before-class (incompatible with D211)
    "D213",   # multi-line-summary-second-line (incompatible with D212)
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]         # assert
"tests/**/__init__.py" = ["D104"] # undocumented-public-package

[tool.ruff.lint.isort]
known-first-party = ["qa_chatbot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src", "tests"]
